fixed a query gap between 900 and 1000 px on tablet/web

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -269,7 +269,6 @@ button#closeDrawer{
 	#status {
 		margin: 1rem 7% 1rem 3%;
 		width: 83%;
-		//overflow: hidden;
 	}
 
 	button#closeDrawer{
@@ -287,7 +286,6 @@ button#closeDrawer{
 
 	.thing{
 		min-height: 8rem;
-
 	}
 
 	#popOut button{
@@ -307,9 +305,9 @@ button#closeDrawer{
 
 //adjusting svg size in select buttons to prevent text overflow
 //affects extra-wide web layout and wider tablet sizes
-@media screen and (min-width: 700px) and (max-width: 930px), screen and (min-width: 1200px){
+@media screen and (min-width: 700px) and (max-width: 1000px), screen and (min-width: 1200px){
 	div#select .svgContainer {
-		width: 35%;
+		width: 32%;
 	}	
 }
 
